// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchField [common] example testing should match snapshot(s) for CustomIcon 1`] = `
<div
  class="lucid-SearchField"
>
  <input
    class="lucid-TextField lucid-TextField-is-single-line"
    rows="5"
    type="text"
    value=""
  />
  <div
    class="lucid-SearchField-Icon-container"
  >
    <svg
      class="lucid-Icon lucid-Icon-color-primary lucid-LoadingIcon lucid-SearchField-Icon"
      height="16"
      preserveAspectRatio="xMidYMid meet"
      style="animation-duration:1.25s"
      viewBox="0 0 100 100"
      width="16"
    >
      <rect
        fill="none"
        height="100"
        width="100"
        x="0"
        y="0"
      />
      <circle
        class="lucid-LoadingIcon-circle"
        cx="50"
        cy="50"
        r="40"
      />
      <circle
        class="lucid-LoadingIcon-spinner"
        cx="50"
        cy="50"
        r="40"
        style="animation-duration:1.25s"
      />
    </svg>
  </div>
</div>
`;

exports[`SearchField [common] example testing should match snapshot(s) for CustomTextField 1`] = `
<div>
  <div
    class="lucid-SearchField"
  >
    <input
      class="lucid-TextField lucid-TextField-is-single-line"
      rows="5"
      type="text"
      value=""
    />
    <div
      class="lucid-SearchField-Icon-container"
    >
      <svg
        class="lucid-Icon lucid-Icon-color-primary lucid-SearchIcon lucid-SearchField-Icon"
        height="12"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 16 16"
        width="12"
      >
        <circle
          cx="6"
          cy="6"
          r="5.5"
        />
        <path
          d="M15.5 15.5L9.876 9.876"
        />
      </svg>
    </div>
  </div>
  <div
    style="margin-top:10px;margin-left:10px"
  >
    <div>
      Hit "enter" to submit: 
    </div>
    <div>
      Last keydown: 
    </div>
    <div>
      Value on blur: 
    </div>
  </div>
</div>
`;

exports[`SearchField [common] example testing should match snapshot(s) for Debounced 1`] = `
<div>
  <div
    class="lucid-SearchField"
    style="margin-bottom:10px"
  >
    <input
      class="lucid-TextField lucid-TextField-is-single-line"
      rows="5"
      type="text"
      value="foo"
    />
    <div
      class="lucid-SearchField-Icon-container"
    >
      <svg
        class="lucid-Icon lucid-Icon-color-primary lucid-SearchIcon lucid-SearchField-Icon lucid-SearchField-Icon-active"
        height="12"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 16 16"
        width="12"
      >
        <circle
          cx="6"
          cy="6"
          r="5.5"
        />
        <path
          d="M15.5 15.5L9.876 9.876"
        />
      </svg>
    </div>
  </div>
  <div
    style="margin-bottom:10px;margin-left:10px"
  >
    Value: foo
  </div>
  <button
    class="lucid-Button"
    type="button"
  >
    <span
      class="lucid-Button-content"
    >
      Set TextField to "foo"
    </span>
  </button>
</div>
`;

exports[`SearchField [common] example testing should match snapshot(s) for Default 1`] = `
<div
  class="lucid-SearchField"
>
  <input
    class="lucid-TextField lucid-TextField-is-single-line"
    rows="5"
    type="text"
    value=""
  />
  <div
    class="lucid-SearchField-Icon-container"
  >
    <svg
      class="lucid-Icon lucid-Icon-color-primary lucid-SearchIcon lucid-SearchField-Icon"
      height="12"
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 16 16"
      width="12"
    >
      <circle
        cx="6"
        cy="6"
        r="5.5"
      />
      <path
        d="M15.5 15.5L9.876 9.876"
      />
    </svg>
  </div>
</div>
`;

exports[`SearchField [common] example testing should match snapshot(s) for Disabled 1`] = `
<div
  class="lucid-SearchField"
>
  <input
    class="lucid-TextField lucid-TextField-is-disabled lucid-TextField-is-single-line"
    disabled=""
    rows="5"
    type="text"
    value=""
  />
  <div
    class="lucid-SearchField-Icon-container lucid-SearchField-Icon-is-disabled"
  >
    <svg
      class="lucid-Icon lucid-Icon-color-primary lucid-SearchIcon lucid-SearchField-Icon"
      height="12"
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 16 16"
      width="12"
    >
      <circle
        cx="6"
        cy="6"
        r="5.5"
      />
      <path
        d="M15.5 15.5L9.876 9.876"
      />
    </svg>
  </div>
</div>
`;

exports[`SearchField [common] example testing should match snapshot(s) for Interactive 1`] = `
<div>
  <div
    class="lucid-SearchField"
  >
    <input
      class="lucid-TextField lucid-TextField-is-single-line"
      rows="5"
      type="text"
      value=""
    />
    <div
      class="lucid-SearchField-Icon-container"
    >
      <svg
        class="lucid-Icon lucid-Icon-color-primary lucid-SearchIcon lucid-SearchField-Icon"
        height="12"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 16 16"
        width="12"
      >
        <circle
          cx="6"
          cy="6"
          r="5.5"
        />
        <path
          d="M15.5 15.5L9.876 9.876"
        />
      </svg>
    </div>
  </div>
  <div
    style="margin-top:10px;margin-left:10px"
  >
    Hit "enter" to submit: 
  </div>
</div>
`;

exports[`SearchField [common] example testing should match snapshot(s) for Placeholder 1`] = `
<div
  class="lucid-SearchField"
>
  <input
    class="lucid-TextField lucid-TextField-is-single-line"
    placeholder="Name/ID"
    rows="5"
    type="text"
    value=""
  />
  <div
    class="lucid-SearchField-Icon-container"
  >
    <svg
      class="lucid-Icon lucid-Icon-color-primary lucid-SearchIcon lucid-SearchField-Icon"
      height="12"
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 16 16"
      width="12"
    >
      <circle
        cx="6"
        cy="6"
        r="5.5"
      />
      <path
        d="M15.5 15.5L9.876 9.876"
      />
    </svg>
  </div>
</div>
`;

exports[`SearchField [common] example testing should match snapshot(s) for Props 1`] = `
<div>
  <div
    class="lucid-SearchField"
  >
    <input
      class="lucid-TextField lucid-TextField-is-single-line"
      rows="5"
      type="text"
      value="foo"
    />
    <div
      class="lucid-SearchField-Icon-container"
    >
      <svg
        class="lucid-Icon lucid-Icon-color-primary lucid-SearchIcon lucid-SearchField-Icon lucid-SearchField-Icon-active"
        height="12"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 16 16"
        width="12"
      >
        <circle
          cx="6"
          cy="6"
          r="5.5"
        />
        <path
          d="M15.5 15.5L9.876 9.876"
        />
      </svg>
    </div>
  </div>
  <div
    class="lucid-SearchField"
  >
    <input
      class="lucid-TextField lucid-TextField-is-single-line"
      placeholder="bar"
      rows="5"
      type="text"
      value=""
    />
    <div
      class="lucid-SearchField-Icon-container"
    >
      <svg
        class="lucid-Icon lucid-Icon-color-primary lucid-SearchIcon lucid-SearchField-Icon"
        height="12"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 16 16"
        width="12"
      >
        <circle
          cx="6"
          cy="6"
          r="5.5"
        />
        <path
          d="M15.5 15.5L9.876 9.876"
        />
      </svg>
    </div>
  </div>
  <div
    class="lucid-SearchField"
  >
    <input
      class="lucid-TextField lucid-TextField-is-disabled lucid-TextField-is-single-line"
      disabled=""
      rows="5"
      type="text"
      value=""
    />
    <div
      class="lucid-SearchField-Icon-container lucid-SearchField-Icon-is-disabled"
    >
      <svg
        class="lucid-Icon lucid-Icon-color-primary lucid-SearchIcon lucid-SearchField-Icon"
        height="12"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 16 16"
        width="12"
      >
        <circle
          cx="6"
          cy="6"
          r="5.5"
        />
        <path
          d="M15.5 15.5L9.876 9.876"
        />
      </svg>
    </div>
  </div>
  <div
    class="lucid-SearchField"
  >
    <input
      class="lucid-TextField lucid-TextField-is-single-line"
      rows="5"
      type="text"
      value=""
    />
    <div
      class="lucid-SearchField-Icon-container"
    >
      <svg
        class="lucid-Icon lucid-Icon-color-primary lucid-SearchIcon lucid-SearchField-Icon"
        height="12"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 16 16"
        width="12"
      >
        <circle
          cx="6"
          cy="6"
          r="5.5"
        />
        <path
          d="M15.5 15.5L9.876 9.876"
        />
      </svg>
    </div>
  </div>
  <div
    class="lucid-SearchField"
  >
    <input
      class="lucid-TextField lucid-TextField-is-single-line"
      rows="5"
      type="text"
      value=""
    />
    <div
      class="lucid-SearchField-Icon-container"
    >
      <svg
        class="lucid-Icon lucid-Icon-color-primary lucid-LoadingIcon lucid-SearchField-Icon"
        height="16"
        preserveAspectRatio="xMidYMid meet"
        style="animation-duration:1.25s"
        viewBox="0 0 100 100"
        width="16"
      >
        <rect
          fill="none"
          height="100"
          width="100"
          x="0"
          y="0"
        />
        <circle
          class="lucid-LoadingIcon-circle"
          cx="50"
          cy="50"
          r="40"
        />
        <circle
          class="lucid-LoadingIcon-spinner"
          cx="50"
          cy="50"
          r="40"
          style="animation-duration:1.25s"
        />
      </svg>
    </div>
  </div>
  <div
    class="lucid-SearchField"
  >
    <input
      class="lucid-TextField lucid-TextField-is-single-line"
      rows="5"
      type="text"
      value="foo"
    />
    <div
      class="lucid-SearchField-Icon-container"
    >
      <svg
        class="lucid-Icon lucid-Icon-color-primary lucid-LoadingIcon lucid-SearchField-Icon lucid-SearchField-Icon-active"
        height="16"
        preserveAspectRatio="xMidYMid meet"
        style="animation-duration:1.25s"
        viewBox="0 0 100 100"
        width="16"
      >
        <rect
          fill="none"
          height="100"
          width="100"
          x="0"
          y="0"
        />
        <circle
          class="lucid-LoadingIcon-circle"
          cx="50"
          cy="50"
          r="40"
        />
        <circle
          class="lucid-LoadingIcon-spinner"
          cx="50"
          cy="50"
          r="40"
          style="animation-duration:1.25s"
        />
      </svg>
    </div>
  </div>
  <div
    class="lucid-SearchField"
  >
    <input
      class="lucid-TextField lucid-TextField-is-single-line"
      rows="5"
      type="text"
      value="bar"
    />
    <div
      class="lucid-SearchField-Icon-container"
    >
      <svg
        class="lucid-Icon lucid-Icon-color-primary lucid-SearchIcon lucid-SearchField-Icon lucid-SearchField-Icon-active"
        height="12"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 16 16"
        width="12"
      >
        <circle
          cx="6"
          cy="6"
          r="5.5"
        />
        <path
          d="M15.5 15.5L9.876 9.876"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`SearchField [common] example testing should match snapshot(s) for ValidSearch 1`] = `
<div
  class="lucid-SearchField"
>
  <input
    class="lucid-TextField lucid-TextField-is-single-line"
    placeholder="Search icon doesn't become active until you type at least three characters ----->"
    rows="5"
    type="text"
    value=""
  />
  <div
    class="lucid-SearchField-Icon-container"
  >
    <svg
      class="lucid-Icon lucid-Icon-color-primary lucid-SearchIcon lucid-SearchField-Icon"
      height="12"
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 16 16"
      width="12"
    >
      <circle
        cx="6"
        cy="6"
        r="5.5"
      />
      <path
        d="M15.5 15.5L9.876 9.876"
      />
    </svg>
  </div>
</div>
`;
